# bude-rfid-inventory

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md
backend/bude_api/: .env.example  README.md  pyproject.toml
backend/bude_api/bude_api/: hooks.py
backend/bude_api/bude_api/api/: alerts.py  analytics.py  assets.py  auth.py  branding.py  companies.py  health.py  hr.py  items.py  masters.py  navigation.py  permissions.py  purchase_orders.py  reports.py  sales_orders.py  scan.py  stock.py  stock_tracking.py  tracking.py  warehouse_tasks.py  warehouses.py
backend/bude_api/bude_api/config/: settings.py
backend/bude_api/bude_api/custom/: rfid_fields.py
backend/bude_api/bude_api/demo/: __init__.py  cleanup.py  config.py  scenarios.py  seed.py  verify.py
backend/bude_api/bude_api/middleware/: request_logger.py
backend/bude_api/bude_api/services/: auth_service.py  erpnext_client.py
backend/bude_api/bude_api/tests/: test_analytics.py  test_assets.py  test_auth.py  test_branding.py  test_companies.py  test_demo_cleanup.py  test_demo_config.py  test_demo_scenarios.py  test_demo_verify.py  test_health.py  test_hr.py  test_items.py  test_items_ledger.py  test_masters.py  test_navigation.py  test_purchase_orders.py  test_sales_orders.py  test_scan.py  test_stock.py  test_tracking.py  test_warehouse_tasks.py  test_warehouses.py
backend/bude_api/bude_api/utils/: response.py
backend/bude_api/scripts/: api_smoke.py
documentation/: README.md
scripts/: install-hourly-roadmap-task.ps1  run-hourly-roadmap-agent.ps1  uninstall-hourly-roadmap-task.ps1
(+418 files in other folders)
