[project]
name = "bude_api"
version = "0.1.0"
description = "API layer for the Bude RFID Inventory mobile platform — runs as a Frappe app on top of ERPNext."
authors = [{ name = "Bude" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

# Frappe + ERPNext are provided by the bench, so they are NOT pinned here.
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "bude_api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # long lines OK in docstrings / data

[tool.pytest.ini_options]
testpaths = ["bude_api/tests"]
